<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cloud_devel</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="scuar003@fiu.edu">robotics</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>Eigen3</depend>
  <depend>PCL</depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv</build_depend>

  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>opencv</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
